maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:7: error: type mismatch;
 found   : Int
 required: (Int, Int)
        return h;
               ^ShortestPathMaze:4: error: type mismatch;
 found   : Unit
 required: (Int, Int)
  for (i <- 0 to h-1) {
         ^